--- a/src/main/resources/templates/uscert_table.html
+++ b/src/main/resources/templates/uscert_table.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <meta charset="UTF-8" />
+<csrf disabled="true" />
+
 <!-- Bootstrap -->
 <link href="node_modules/bootstrap/dist/css/bootstrap.min.css"
 	rel="stylesheet" />
@@ -10,90 +12,11 @@
 <!-- Custom CSS -->
 <link href="node_modules/admin-lte/dist/css/AdminLTE.min.css"
 	rel="stylesheet" />
-<link
-	href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css"
-	rel="stylesheet" />
-<link href="select2-4.0.3/dist/css/select2.min.css" />
 <link rel="stylesheet"
 	href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-<style type="text/css">
-html {
-	height: 100%
-}
 
-body {
-	height: 100%;
-	margin: 0;
-	padding: 0
-}
+<link rel="stylesheet" href="css/uscert_table.css" />
 
-#map_canvas {
-	height: 100%
-}
-
-#ex1Slider .slider-selection {
-	background: #BABABA;
-}
-
-:root { -
-	-color1: #ef2c24; -
-	-color2: #efa526; -
-	-color3: #6c77ef; -
-	-color4: #46ef36; -
-	-color5: #dbdb18;
-}
-
-.attack-type-1 {
-	color: var(- -color1);
-}
-
-.attack-type-2 {
-	color: var(- -color2);
-}
-
-.attack-type-3 {
-	color: var(- -color3);
-}
-
-.attack-type-4 {
-	color: var(- -color4);
-}
-
-.attack-type-5 {
-	color: var(- -color5);
-}
-
-.div-inline {
-	display: inline
-}
-
-#info-box {
-	background-color: white;
-	border: 1px solid #ef2c24;
-	bottom: 100px;
-	height: 100px;
-	padding: 10px;
-	/*position: absolute;*/
-	left: 30px;
-}
-/* alternating column backgrounds */
-.vis-time-axis .vis-grid.vis-odd {
-	background: #f5f5f5;
-}
-/* gray background in weekends, white text color */
-.vis-time-axis .vis-grid.vis-saturday {
-	background: greenyellow;
-}
-
-.vis-time-axis .vis-grid.vis-sunday {
-	background: #ffcfce;
-}
-
-.vis-time-axis .vis-text.vis-saturday, .vis-time-axis .vis-text.vis-sunday
-	{
-	color: white;
-}
-</style>
 
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/angular/angular.min.js"></script>
@@ -101,16 +24,22 @@ body {
 </head>
 
 <body>
-	<div id="wrapper" class="container-fluid" ng-app="myApp" ng-controller="myCtrl">
+	<div id="wrapper" class="container-fluid" ng-app="myApp"
+		ng-controller="myCtrl">
 		<div class="col-lg-12 row ">
 			<div class="col-lg-3">
 				<img src="top-cap02.png" />
 			</div>
+			<div class="col-lg-6">
+				<h3>弱點情報分析</h3>
+			</div>
+			<div class="col-lg-3">
+				<h3>我是：{{myRoleName[myRole]}}</h3>
+			</div>
 		</div>
 		<div class="col-lg-12">
 			<div class="box-header">
-
-				<h1>US Cert弱點整理</h1>
+				<h4>US Cert弱點整理</h4>
 			</div>
 			<div class="panel-body">
 				<table class="table table-bordered table-hover table-condensed ">
@@ -130,18 +59,30 @@ body {
 							<td class="success">{{item.vendor}}</td>
 							<td class="success">{{item.product}}</td>
 							<td class="info">{{item.Description}}
-								<div ng-show="!show">
-									<a ng-click="show = !show">翻譯</a>
+								<div ng-if="showReviewerBeforeReleased(item)">	    
+									<div ng-show="myRole.indexOf('ROLE_REVIEWER') > -1">
+										<button class="btn btn-success btn-lg"
+											ng-click="clickApprove(item)">核准</button>
+										<button class="btn btn-danger btn-lg"
+											ng-click="clickRelease(item)">發佈</button>
+									</div>
 								</div>
-								<div ng-show="show">
-									<a ng-click="show = !show">儲存</a>
-								</div>
-								<div ng-if="show">
-									<textarea></textarea>
+
+								<div>
+									<div class="form-group" ng-if="showWriterBeforeSubmit(item) || showReviewerBeforeReleased(item)">
+										<textarea class="form-control" rows="5" ng-model="item.chi">{{item.chi}}</textarea>
+								    </div>
+								    
+								    <div class="form-group" ng-if="showWriterBeforeSubmit(item)">
+										<button class="btn" ng-click="clickSave(item)">暫存</button>
+										<button class="btn btn-success" ng-click="clickSubmit(item)">送出</button>
+									</div>
+									<div ng-if="showWriterAfterSubmit(item) || showReviewerAfterReleased(item)">
+										<p class="text-red">{{item.chi}}</p></div>
 								</div>
 							</td>
-							<td>{{item.Published}}</td>
 							<td>{{item.Score}}</td>
+							<td>{{item.Published}}</td>
 						</tr>
 					</tbody>
 				</table>
@@ -150,8 +91,8 @@ body {
 		</div>
 
 	</div>
-    
-    <script src="js/uscert_table.js"></script>	
+
+	<script src="js/uscert_table.js"></script>
 </body>
 
 </html>
