--- a/src/main/resources/templates/uscert_table.html
+++ b/src/main/resources/templates/uscert_table.html
@@ -4,94 +4,162 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <meta charset="UTF-8" />
 <csrf disabled="true" />
+<!-- Tell the browser to be responsive to screen width -->
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport" />
 
-<!-- Bootstrap -->
-<link href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-	rel="stylesheet" />
 
-<!-- Custom CSS -->
-<link href="node_modules/admin-lte/dist/css/AdminLTE.min.css"
-	rel="stylesheet" />
+<!-- Bootstrap 3.3.6 -->
 <link rel="stylesheet"
-	href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+	href="node_modules/admin-lte/bootstrap/css/bootstrap.min.css" />
 
-<link rel="stylesheet" href="css/uscert_table.css" />
+<!-- Theme style -->
+<link rel="stylesheet"
+	href="node_modules/admin-lte/dist/css/AdminLTE.min.css" />
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/angular/angular.min.js"></script>
-<script src="node_modules/admin-lte/dist/js/app.min.js"></script>
+<link rel="stylesheet"
+	href="node_modules\admin-lte\dist\css\skins\_all-skins.min.css" />
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 
-<body>
+
+<body class="skin-blue-light sidebar-mini">
+
+<div w3-include-html="a.html"></div> 
+<div w3-include-html="b.html"></div>
 	<div id="wrapper" class="container-fluid" ng-app="myApp"
 		ng-controller="myCtrl">
-		<div class="col-lg-12 row ">
-			<div class="col-lg-3">
-				<img src="top-cap02.png" />
-			</div>
-			<div class="col-lg-6">
-				<h3>弱點情報分析</h3>
-			</div>
-			<div class="col-lg-3">
-				<h3>我是：{{myRoleName[myRole]}}</h3>
-			</div>
-		</div>
-		<div class="col-lg-12">
-			<div class="box-header">
-				<h4>US Cert弱點整理</h4>
-			</div>
-			<div class="panel-body">
-				<table class="table table-bordered table-hover table-condensed ">
-					<thead>
-						<tr>
-							<th></th>
-							<th>設備商</th>
-							<th>產品</th>
-							<th>敘述</th>
-							<th>分數</th>
-							<th>發佈日期</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="item in posts">
-							<td>{{$index + 1}}</td>
-							<td class="success">{{item.vendor}}</td>
-							<td class="success">{{item.product}}</td>
-							<td class="info">{{item.Description}}
-								<div ng-if="showReviewerBeforeReleased(item)">	    
-									<div ng-show="myRole.indexOf('ROLE_REVIEWER') > -1">
-										<button class="btn btn-success btn-lg"
-											ng-click="clickApprove(item)">核准</button>
-										<button class="btn btn-danger btn-lg"
-											ng-click="clickRelease(item)">發佈</button>
-									</div>
-								</div>
+		<header class="main-header">
+			<!-- Logo -->
+			<a href="index.html" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
+				<span class="logo-mini"><b>C</b>HT</span> <!-- logo for regular state and mobile devices -->
+				<span class="logo-lg">Chunghwa Telecom</span>
+				
+			</a>
+			<!-- Header Navbar: style can be found in header.less -->
+			<nav class="navbar navbar-static-top">
+				<!-- Sidebar toggle button-->
+				<a href="#" class="sidebar-toggle" data-toggle="offcanvas"
+					role="button"> <span class="sr-only">Toggle navigation</span>
+				</a>
+                <span><img src="top-cap02.png" /></span>
+				<div class="navbar-custom-menu">
+					<ul class="nav navbar-nav">
+						<!-- Messages: style can be found in dropdown.less-->
+						<li class="dropdown messages-menu"><a href="#"
+							class="dropdown-toggle" data-toggle="dropdown"> <i
+								class="fa fa-envelope-o"></i> <span class="label label-success">4</span>
+						</a></li>
 
-								<div>
-									<div class="form-group" ng-if="showWriterBeforeSubmit(item) || showReviewerBeforeReleased(item)">
-										<textarea class="form-control" rows="5" ng-model="item.chi">{{item.chi}}</textarea>
-								    </div>
-								    
-								    <div class="form-group" ng-if="showWriterBeforeSubmit(item)">
-										<button class="btn" ng-click="clickSave(item)">暫存</button>
-										<button class="btn btn-success" ng-click="clickSubmit(item)">送出</button>
-									</div>
-									<div ng-if="showWriterAfterSubmit(item) || showReviewerAfterReleased(item)">
-										<p class="text-red">{{item.chi}}</p></div>
-								</div>
-							</td>
-							<td>{{item.Score}}</td>
-							<td>{{item.Published}}</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		<!-- Left side column. contains the logo and sidebar -->
+		<aside class="main-sidebar">
+			<!-- sidebar: style can be found in sidebar.less -->
+			<section class="sidebar">
 
+				<!-- sidebar menu: : style can be found in sidebar.less -->
+				<ul class="sidebar-menu">
+					<li class="header">MAIN NAVIGATION</li>
+
+					<li class="treeview"><a href="#"> <i class="fa fa-folder"></i>
+							<span>Examples</span> <span class="pull-right-container">
+								<i class="fa fa-angle-left pull-right"></i>
+						</span>
+					</a>
+						<ul class="treeview-menu">
+							<li><a href="pages/examples/pace.html"><i
+									class="fa fa-circle-o"></i> Pace Page</a></li>
+						</ul></li>
+
+				</ul>
+			</section>
+			<!-- /.sidebar -->
+		</aside>
+
+
+		<div class="content-wrapper">
+
+			<div class="col-lg-12 row ">
+				<div class="col-lg-6">
+					<h3>弱點情報分析</h3>
+				</div>
+				<div class="col-lg-3">
+					<h3>我是：{{myRoleName[myRole]}}</h3>
+				</div>
+			</div>
+			<div class="col-lg-12">
+				<div class="box-header">
+					<h4>US Cert弱點整理</h4>
+					弱點日期：{{lastMonday | date:'yyyy-MM-dd'}} ~ {{thisSunday |
+					date:'yyyy-MM-dd'}}
+				</div>
+				<div class="panel-body">
+					<div ng-if="showWriterBeforeSubmit()">
+						<button class="btn btn-success" ng-click="clickSubmit()">送出</button>
+					</div>
+
+					<table class="table table-bordered table-hover table-condensed ">
+						<thead>
+							<tr>
+								<th></th>
+								<th>設備商 / 產品</th>
+								<th>敘述</th>
+								<th>分數</th>
+								<th>發佈日期</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="item in posts | orderBy: item.vendor">
+								<td>{{$index + 1}}</td>
+								<td class="success">{{item.vendor}} / {{item.product}}</td>
+								<td class="info td-word-wrap">{{item.description}}
+									<div>
+										<div class="form-group"
+											ng-if="showWriterBeforeSubmit(item) || showReviewerBeforeReleased(item)">
+											<textarea class="form-control" rows="5" ng-model="item.chi">{{item.chi}}</textarea>
+										</div>
+
+										<div class="form-group" ng-if="showWriterBeforeSubmit(item)">
+											<button class="btn" ng-click="clickSave(item)">暫存</button>
+										</div>
+										<div
+											ng-if="showWriterAfterSubmit(item) || showReviewerAfterReleased(item)">
+											<p class="text-red">{{item.chi}}</p>
+										</div>
+									</div>
+
+									<div ng-if="showReviewerBeforeReleased(item)">
+										<div ng-show="myRole.indexOf('ROLE_REVIEWER') > -1">
+											<button class="btn btn-success btn-lg"
+												ng-click="clickApprove(item)">核准</button>
+											<button class="btn btn-danger btn-lg"
+												ng-click="clickRelease(item)">發佈</button>
+										</div>
+									</div>
+								</td>
+								<td>{{item.score}}</td>
+								<td>{{item.published}}</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+			</div>
 		</div>
 
 	</div>
-
-	<script src="js/uscert_table.js"></script>
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="node_modules/angular/angular.min.js"></script><script src="js/uscert_table.js"></script>
 </body>
 
 </html>
